<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Groovy movie</string>
    <string name="i_am_looking_for">Я ищу...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_header">Название: </string>
    <string name="rating_header">Рейтинг: </string>
    <string name="release_date_header">Дата релиза: </string>
    <string name="some_movie_information">КАКАЯ-ТО ИНФОРМАЦИЯ О ФИЛЬМЕ</string>
    <string name="some_genre">Какой-то жанр</string>
    <string name="genre_header">Жанр: </string>
    <string name="date_example">2020</string>
    <string name="rating_example">4.5</string>
    <string name="movie_title_example">MOVIE_TITLE</string>
    <string name="empty_request">Пустой запрос</string>
    <string name="retry">Повторить запрос</string>
    <string name="action">Боевики</string>
    <string name="comedy">Комедии</string>
    <string name="drama">Драмы</string>
    <string name="triller">Триллеры</string>
    <string name="family">Семейные</string>
    <string name="data_receiving_error">Data receiving error</string>
    <string name="service_movie_overview_response_empty_extra">В базе данных нет описания для этого фильма</string>
    <string name="service_movie_overview_request_error_extra">Не удалось загрузить описание для этого фильма</string>
    <string name="snack_msg_overview_load_error">Ошибка загрузки описания</string>
    <string name="snack_msg_overview_load_success">Описание фильма успешно загружено через сервис</string>
    <string name="msg_no_connection">NO INTERNET CONNECTION</string>
    <string name="connection_icon">connection icon</string>
    <string name="note_content_title">\"%1$s\"</string>
    <string name="movie_title_release_date">\"%1$s %2$d\"</string>
    <string name="note_content_hint" tools:ignore="TypographyEllipsis">Оставьте здесь заметку о фильме...</string>
    <string name="settings">Настройки</string>
    <string name="menu_title_about_app">О приложении</string>
    <string name="title_favorite">Закладки</string>
    <string name="title_history">История</string>
    <string name="alert_dialog_contacts_permission_title">Доступ к контактам</string>
    <string name="alert_dialog_contacts_permission_message">Чтобы увидеть контакты, необходимо разрешить доступ к контактам</string>
    <string name="alert_dialog_contacts_permission_positive">Предоставить</string>
    <string name="alert_dialog_contacts_permission_negative">Нет</string>
    <string name="title_movies_list">Фильмы</string>
    <string name="title_maps">Карты</string>
    <string name="actors_header">Актерcкий состав:</string>
    <string name="actor_birthdate">Дата рождения: %1$s</string>
    <string name="no_information">нет информации</string>
    <string name="actor_birthplace">Место рождения: %1$s</string>
    <string name="movie_details_title">\"%1$s\"</string>
    <string name="movie_details_overview">\"%1$s\"</string>
    <string name="no_favorite">Ни один фильм не добавлен в закладки</string>
</resources>