<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_movies_list"
        android:icon="@drawable/baseline_local_movies_black_24dp"
        android:title="@string/title_movies_list"/>

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_baseline_bookmark_border_24"
        android:title="@string/title_favorite"/>

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/baseline_history_black_24dp"
        android:title="@string/title_history"/>

    <item
        android:id="@+id/action_maps"
        android:icon="@drawable/baseline_history_black_24dp"
        android:title="@string/title_maps"/>

</menu>