<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background"
            app:collapsedTitleTextAppearance="@style/expandedBarTextStyle"
            app:contentScrim="@android:color/holo_orange_dark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/appbar_background"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <ImageView
                    android:id="@+id/groovy_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/zero_value"
                    android:layout_margin="@dimen/margin_16dp"
                    android:src="@drawable/groovy_logo"
                    app:layout_constraintBottom_toTopOf="@id/tf_input_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_input_search"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:hint="@string/i_am_looking_for"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/text_input_box_stroke"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/ic_baseline_search_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/groovy_logo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tf_edit_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toTopOf="@id/tf_input_search"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_genre_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:text="@string/action"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movies_recyclerview_action"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_height"
                android:layoutAnimation="@anim/layout_animation"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_genre_comedy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:text="@string/comedy"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movies_recyclerview_comedy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_height"
                android:layoutAnimation="@anim/layout_animation"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_genre_drama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:text="@string/drama"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movies_recyclerview_drama"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_height"
                android:layoutAnimation="@anim/layout_animation"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_genre_triller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:text="@string/triller"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movies_recyclerview_triller"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_height"
                android:layoutAnimation="@anim/layout_animation"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_genre_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:text="@string/family"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movies_recyclerview_family"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_height"
                android:layoutAnimation="@anim/layout_animation"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:SpinKit_Color="@android:color/holo_orange_dark"
        android:layout_gravity="center"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>