<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:scrollbars="none"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/draw_movie_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_local_movies_black_24dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/icon_group"
            android:layout_width="40dp"
            android:layout_height="90dp"
            app:cardElevation="@dimen/margin_16dp"
            android:layout_margin="@dimen/margin_4dp"
            android:backgroundTint="@color/neutral_white"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/checkbox_favorite"
                    android:layout_width="@dimen/checkbox_size_35"
                    android:layout_height="@dimen/checkbox_size_35"
                    android:layout_gravity="center|top"
                    android:background="@color/transparent"
                    android:button="@drawable/favorite_checkbox_40"
                    android:buttonTint="@color/action_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/icon_movie_details_note"/>

                <ImageView
                    android:id="@+id/icon_movie_details_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:src="@drawable/ic_sticky_note_big"
                    app:tint="@color/tab_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/checkbox_favorite"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/draw_movie_details_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:background="@drawable/poster_border"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/kostyl"
            tools:layout_height="200dp"
            tools:layout_width="130dp"
            tools:src="@drawable/tmdb_logo" />

        <View
            android:id="@+id/kostyl"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@id/draw_movie_backdrop"
            app:layout_constraintEnd_toEndOf="@id/draw_movie_backdrop"
            app:layout_constraintStart_toStartOf="@id/txt_movie_details_title" />

        <TextView
            android:id="@+id/txt_movie_details_title"
            android:layout_width="@dimen/zero_value"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/neutral_white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txt_movie_details_rating_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/draw_movie_details_poster"
            app:layout_constraintTop_toBottomOf="@id/draw_movie_backdrop"
            tools:text="@string/movie_title_example" />

        <TextView
            android:id="@+id/txt_movie_details_rating_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/txt_movie_details_release_date_header"
            app:layout_constraintStart_toStartOf="@id/txt_movie_details_title"
            app:layout_constraintTop_toBottomOf="@id/txt_movie_details_title" />

        <TextView
            android:id="@+id/txt_movie_details_rating"
            android:layout_width="@dimen/zero_value"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/neutral_white"
            app:layout_constraintBottom_toBottomOf="@id/txt_movie_details_rating_header"
            app:layout_constraintStart_toEndOf="@id/icon_star_movie_details"
            app:layout_constraintTop_toTopOf="@id/txt_movie_details_rating_header"
            tools:text="@string/rating_example" />

        <ImageView
            android:id="@+id/icon_star_movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="@id/txt_movie_details_rating_header"
            app:layout_constraintStart_toEndOf="@id/txt_movie_details_rating_header"
            app:layout_constraintTop_toTopOf="@+id/txt_movie_details_rating_header" />

        <TextView
            android:id="@+id/txt_movie_details_release_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/txt_movie_details_genre_header"
            app:layout_constraintStart_toStartOf="@id/txt_movie_details_title"
            app:layout_constraintTop_toBottomOf="@id/txt_movie_details_rating_header" />

        <TextView
            android:id="@+id/txt_movie_details_release_date"
            android:layout_width="@dimen/zero_value"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/neutral_white"
            app:layout_constraintBottom_toBottomOf="@id/txt_movie_details_release_date_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_movie_details_release_date_header"
            app:layout_constraintTop_toTopOf="@id/txt_movie_details_release_date_header"
            tools:text="@string/date_example" />

        <TextView
            android:id="@+id/txt_movie_details_genre_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/draw_movie_details_poster"
            app:layout_constraintStart_toStartOf="@id/txt_movie_details_title"
            app:layout_constraintTop_toBottomOf="@id/txt_movie_details_release_date_header" />

        <TextView
            android:id="@+id/txt_movie_details_genre"
            android:layout_width="@dimen/zero_value"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/neutral_white"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/txt_movie_details_genre_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_movie_details_genre_header"
            app:layout_constraintTop_toTopOf="@id/txt_movie_details_genre_header"
            tools:text="/////////////" />

        <TextView
            android:id="@+id/txt_movie_overview"
            android:layout_width="@dimen/zero_value"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:layout_marginVertical="@dimen/margin_16dp"
            android:gravity="top"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/neutral_white"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/draw_movie_details_poster"
            tools:text="@string/some_movie_information" />

        <LinearLayout
            android:id="@+id/container_for_actors"
            android:layout_width="@dimen/zero_value"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_movie_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>